# bayesian-envhealth-models

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: model_run.py
scripts/conf/: model_config.yaml
src/bayesian_envhealth_models/: models.py
